Dependency updates (#59)
* Update spring, hibernate dependencies
* Various boxing/primitive constructor changes
* Use addAll
* Use equals instead of ==
* Update PageRequest construction
* Use PropertySourcesPlaceholderConfigurer
* Bump mysql-connector version
* Remove duplicate dependency declaration
* Bump spring versions to latest point release